app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  -webkit-tap-highlight-color: transparent;
}

body {
  overscroll-behavior: none;
  background: #E4F2F2;
  color: #1A1A1C;
}

::-webkit-scrollbar {
  width: 4px;
}
::-webkit-scrollbar-track {
  background: #E4F2F2;
}
::-webkit-scrollbar-thumb {
  background: #DCDCD7;
  border-radius: 2px;
}

